Backend The front-end can use the user name to get access to the user's past posts. Updated the document.
