# go-gin-app/docs/swagger.json
@@ -4,7 +4,7 @@
         "description": "An on-campus dating application",
         "title": "UFMingle",
         "contact": {},
-        "version": "1.0"
+        "version": "2.0"
     },
     "paths": {
         "/": {
@@ -15,22 +15,15 @@
                 "summary": "Show forum home page and all articles",
                 "responses": {
                     "200": {
-                        "description": "Return an array of structure article",
+                        "description": "Return all the information of article",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/main.article"
-                            }
+                            "$ref": "#/definitions/main.article"
                         }
                     }
                 }
             }
         },
         "/article/create": {
-            "get": {
-                "summary": "Show article creation page",
-                "responses": {}
-            },
             "post": {
                 "produces": [
                     "application/json"
@@ -50,19 +43,60 @@
                         "name": "content",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "The author of the article",
+                        "name": "author",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Create an article successfully",
+                        "description": "If the article has been created successfully, return the number of rows been affected, else 0",
                         "schema": {
                             "type": "int"
                         }
                     },
                     "400": {
-                        "description": "Failed to create an article",
+                        "description": "There is an error while creating the article",
                         "schema": {
-                            "type": "int"
+                            "type": "error"
+                        }
+                    }
+                }
+            }
+        },
+        "/article/pastposts/:username": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get article posted by the user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "username, i.e. author of the article",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.article"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "failure",
+                        "schema": {
+                            "type": "error"
                         }
                     }
                 }
@@ -85,7 +119,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Return the struct article",
+                        "description": "Return the article",
                         "schema": {
                             "$ref": "#/definitions/main.article"
                         }
@@ -93,7 +127,122 @@
                     "404": {
                         "description": "Not found or invalid article_id",
                         "schema": {
-                            "type": "int"
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/image/avatar/:username": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get the avatar of the user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "An avatar is returned",
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    "404": {
+                        "description": "Error",
+                        "schema": {
+                            "type": "error"
+                        }
+                    }
+                }
+            }
+        },
+        "/image/delete/:filename": {
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Delete an image file",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Filename of the image",
+                        "name": "filename",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "type": "map"
+                        }
+                    },
+                    "400": {
+                        "description": "Failure",
+                        "schema": {
+                            "type": "error"
+                        }
+                    }
+                }
+            }
+        },
+        "/image/download/:filename": {
+            "get": {
+                "produces": [
+                    "image/jpeg"
+                ],
+                "summary": "Retrieve images inserted in the posts or replies",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Image filename",
+                        "name": "filename",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    "400": {
+                        "description": "Failure",
+                        "schema": {
+                            "type": "error"
+                        }
+                    }
+                }
+            }
+        },
+        "/image/upload": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Upload images inserted by users in posts or replies",
+                "responses": {
+                    "200": {
+                        "description": "errno: 0, data: A list of download addresses of images",
+                        "schema": {
+                            "type": "map"
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "schema": {
+                            "type": "error"
                         }
                     }
                 }
@@ -132,13 +281,13 @@
                     "200": {
                         "description": "Log in successfully",
                         "schema": {
-                            "type": "int"
+                            "type": "string"
                         }
                     },
                     "400": {
                         "description": "Failed to log in",
                         "schema": {
-                            "type": "int"
+                            "type": "string"
                         }
                     }
                 }
@@ -150,7 +299,14 @@
                     "application/json"
                 ],
                 "summary": "Logout",
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "Log out successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         },
         "/u/register": {
@@ -160,7 +316,50 @@
             },
             "post": {
                 "summary": "Register a new user",
-                "responses": {}
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Gatorlink",
+                        "name": "gatorlink",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "GatorPW",
+                        "name": "gatorPW",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username",
+                        "name": "username",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Password",
+                        "name": "password",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Register successfully, return the number of rows been affected",
+                        "schema": {
+                            "type": "int"
+                        }
+                    },
+                    "400": {
+                        "description": "ErrorMessage",
+                        "schema": {
+                            "type": "error"
+                        }
+                    }
+                }
             }
         }
     },
@@ -168,10 +367,19 @@
         "main.article": {
             "type": "object",
             "properties": {
+                "author": {
+                    "type": "string"
+                },
                 "content": {
                     "type": "string"
                 },
+                "dislikes": {
+                    "type": "integer"
+                },
                 "id": {
+                    "type": "integer"
+                },
+                "likes": {
                     "type": "integer"
                 },
                 "title": {
